Fixes radio- and checkbox grouping headline alignment

--- a/src/styles/unibase/forms/_checkboxes.sass
+++ b/src/styles/unibase/forms/_checkboxes.sass
@@ -137,3 +137,7 @@ input[type=radio] + label
 
     &:after
         opacity: 0
+
+uni-checkboxgroup-input,
+uni-radiogroup-input
+    display: block
